# org-pipeline

./: .gitignore  ORG_PIPELINE_README.md  PR_TASK_PROFILE_README.md  README.md  export_all_merged_prs.py  org_pipeline_requirements.txt  pr_task_profile_report.py  repos-manifest.example.json  run_org_pipeline.py  run_org_pipeline_no_quality.py  tokens.example
codebase_profiler/: .dockerignore  .gitignore  Dockerfile  README.md  codebase_sheet.xlsx  pyproject.toml  run.sh
codebase_profiler/profiler/: __init__.py  cli.py  discovery.py  models.py  remote.py  runner.py  tools.py  writer.py
codebase_profiler/profiler/collectors/: base.py  codeanalysis.py  coverage.py  duplication.py  git_history.py  infra.py  llm_attribution.py  loc.py  vcs_api.py
codebase_profiler/profiler/providers/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py
lh2-datalabs-eval-kit/: .env.example  .gitignore  README.md  USER_GUIDE.md  bulk_repo_evaluator_parallel.py  bulk_svn_evaluator.py  consolidate_output.py  constants.py  cybersecurity_pr_scanner.py  fill_template.py  platform_clients.py  production_quality_check.py  quality_checks.py  quality_evaluator.py  repo_evaluator.py  repo_evaluator_helpers.py  requirements.txt  run_all_repos.py  security_check.py  taxonomy_check.py  test_bitbucket_support.py  transpose_csv.py  vibecode_check.py
lh2-datalabs-eval-kit/task_taxonomy/: __init__.py  classify.py  taxonomy.py
lh2-datalabs-eval-kit/test_runners/: __init__.py  analyzer.py  base.py  cobol.py  dotnet_framework.py  go.py  javascript.py  parsers.py  php.py  python.py  registry.py
(+9 files in other folders)
