[project]
name = "codebase-profiler"
version = "0.1.0"
description = "Auto-fill the vendor codebase intake sheet from a repository."
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
]

[project.scripts]
codebase-profiler = "profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["profiler"]
